--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
 html{
-    background-color: dodgerblue;
+    background: #52E87F 0% 0% no-repeat padding-box;
+    opacity: 1;
+    text-align: center;
+    position: absolute;
+    margin: auto;
 }
