--- a/client/src/CSS/profile.css
+++ b/client/src/CSS/profile.css
@@ -43,6 +43,14 @@
 #loading{
     text-align: center;
     position: absolute;
-    top: 45%;
-    left: 46%;
+    top: 40%;
+    left: 47.6%;
+}
+#error{
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    margin-top: 6.5%;
+    padding: 5%;
+    background-color: white;
 }
