--- a/client/src/CSS/header.css
+++ b/client/src/CSS/header.css
@@ -2,6 +2,7 @@
     position: fixed;
     background-color: #17a843;
     width: 100%;
+    height: 130px;
     border-bottom: 1em;
     border-color: 3px solid gray;
 }
@@ -11,4 +12,46 @@ img{
     width: 10%;
     display:block;
     margin: auto;
+}
+@media (max-width: 1400px){
+    .block {
+        height: 110px;
+    }
+}
+@media (max-width: 1200px){
+    .block{
+        height: 100px;
+    }
+    img{
+        width: 10%;
+    }
+}
+@media (max-width: 1000px){
+    .block {
+        height: 80px;
+    }
+}
+@media (max-width: 800px){
+    .block {
+        height: 60px;
+    }
+}
+@media (max-width: 600px){
+    .block{
+        height: 45px;
+    }
+    img{
+        width: 10%;
+    }
+}
+
+@media (max-width: 550px){
+    img{
+        width: 15%;
+    }
+}
+@media(max-width: 400px){
+    .block{
+        height: 40px;
+    }
 }
