--- a/client/src/CSS/search.css
+++ b/client/src/CSS/search.css
@@ -1,16 +1,17 @@
 .form-group{
   position: absolute;
-  top: 330px;
-  left: 380px;
+  top: 40%;
+  left: 20%;
+  width: 55%;
   display: inline;
-  padding: 20px;
+  padding: 1.1%;
 }
 
 #box{
   outline:none;
-  width: 910px;
-  height: 55px;
-  padding: 20px;
+  width: 100%;
+  height: 0;
+  padding: 3.1%;
   background: #FFFFFF 0% 0% no-repeat padding-box;
   border-radius: 20px;
   border: none;
@@ -19,79 +20,50 @@
 
 #btn{
   outline:none;
-  width: 55px;
-  height: 56px;
+  width: 6%;
+  height: 60%;
   position: absolute;
-  top: 20px;
-  left: 940px; 
+  top: 20%;
+  left: 100%; 
   background:  #17a843 0% 0% no-repeat padding-box;
   border-radius: 18px;
   border: none;
 }
 
-#btn:hover{
-  outline:none;
-  width: 55px;
-  height: 56px;
-  position: absolute;
-  top: 20px;
-  left: 940px; 
-  cursor: pointer;
-  border-radius: 18px;
-  border: none;
-}
-
 #region{
-    background: rgba(255, 255, 255, 0);
-    position: absolute;
-    color: #000000;
-    top: 28px;
-    left: 840px;
-    height: 35px;
-    width: 65px;
-    border: none;
-    outline: none;
-    font-weight: bolder;
-    text-align-last: center; 
+  background: rgba(255, 255, 255, 0);
+  position: absolute;
+  color: #000000;
+  top: 30%;
+  left: 87%;
+  height: 40%;
+  width: 8%;
+  border: none;
+  outline: none;
+  font-weight: bolder;
+  text-align-last: center; 
 }
 
-.arrow{
-  width: 25px;
+.arrow {
+  width: 60%;
 }
 
-#oval1{
-    top: 6px;
-    left: -0.2631683349609375px;
-    width: 303px;
-    height: 346px;
-    transform: matrix(0.85, 0.53, -0.53, 0.85, 0, 0);
-    background-color: #52E87F;
-    position: absolute;
-  }
-  #oval2{
-    top: -190.84991455078125px;
-    left: 1557px;
-    width: 511px;
-    height: 445px;
-    transform: matrix(0.99, -0.16, 0.16, 0.99, 0, 0);
-    background-color: #52E87F;
-    position: absolute;
-  }
-  #oval3{
-    top: 619px;
-    left: 383px;
-    width: 1784px;
-    height: 799px;
-    transform: matrix(0.99, -0.16, 0.16, 0.99, 0, 0);
-    background-color: #52E87F;
-    position: absolute;
-  }
-  #oval4{
-    top: 710px;
-    left: -180.05413818359375px;
-    width: 538px;
-    height: 538px;
-    transform: matrix(-0.71, 0.71, -0.71, -0.71, 0, 0);
-    background-color: #52E87F;
-    position: absolute;
-  }
+#oval3 {
+  top: 70%;
+  left: 30%;
+  width: 100%;
+  height: 90%;
+  transform: matrix(0.99, -0.16, 0.16, 0.99, 0, 0);
+  background-color: #52E87F;
+  position: absolute;
+}
+  #oval4 {
+  top: 80%;
+  left: -15%;
+  width: 35%;
+  height: 70%;
+  transform: matrix(-0.71, 0.71, -0.71, -0.71, 0, 0);
+  background-color: #52E87F;
+  position: absolute;
+}
+
