--- a/client/src/CSS/header.css
+++ b/client/src/CSS/header.css
@@ -5,14 +5,15 @@
     height: 130px;
     border-bottom: 1em;
     border-color: 3px solid gray;
+    display: flex;
 }
 
-img{
+.block img{
     background-color: #17a843;
-    width: 10%;
-    display:block;
+    width: 5%;
     margin: auto;
 }
+
 @media (max-width: 1400px){
     .block {
         height: 110px;
